# toon-py

./: LICENSE  README.md  pyproject.toml
examples/: README.md  advanced_features.py  basic_usage.py  llm_integration.py  performance_comparison.py
tests/: README.md  __init__.py  conftest.py  smoke_test.py  test_advanced_features.py  test_basic_encoding.py  test_normalization.py  test_tabular_arrays.py
toon_py/: __init__.py  constants.py  decoder.py  decoders.py  encoder.py  encoders.py  normalize.py  parser.py  primitives.py  scanner.py  test_toon.py  types.py  writer.py
